created input field, button and people list. People state begin passed from parent component. Add person function being communicated to parent

--- a/ngrxStore/party-planner/src/app/app.component.html
+++ b/ngrxStore/party-planner/src/app/app.component.html
@@ -1,4 +1,12 @@
 <h3>Party Planner</h3>
 <app-filter-select></app-filter-select>
-<app-person-input></app-person-input>
-<app-person-list></app-person-list>
+<app-person-input
+eput
+  (onAdd)="addPerson($event)"
+></app-person-input>
+<app-person-list
+  [people]="people"
+  (onGuestAdd)="addGuest($event)"
+
+
+></app-person-list>
