--- a/ngrxStore/party-planner/src/app/person-list.component.html
+++ b/ngrxStore/party-planner/src/app/person-list.component.html
@@ -1,1 +1,8 @@
 <h3>Person List</h3>
+<ul>
+  <li *ngFor="let person of people; let index = index;">
+    Name: {{person.name}} - 
+    Guests: {{person.guests}} <button (click)="addGuest(index)">+</button> 
+    Attending? {{person.attending}} <input type="checkbox">
+  </li>
+</ul>
