--- a/ngrxStore/party-planner/src/app/person-input.component.html
+++ b/ngrxStore/party-planner/src/app/person-input.component.html
@@ -1,3 +1,3 @@
 <h3>Person Input</h3>
-<input type="text" name="" placeholder="Add a person here"/>
-<button>Add</button>
+<input type="text" placeholder="Add a person here" #personName />
+<button (click)="addPerson(personName.value); personName.value='' ">Add</button>
