--- a/ngrxStore/party-planner/src/app/app.component.html
+++ b/ngrxStore/party-planner/src/app/app.component.html
@@ -7,6 +7,7 @@ eput
 <app-person-list
   [people]="people"
   (onGuestAdd)="addGuest($event)"
+  (onGuestRemove)="removeGuest($event)"
 
 
 ></app-person-list>
