attending toggle functionality

--- a/ngrxStore/party-planner/src/app/app.component.html
+++ b/ngrxStore/party-planner/src/app/app.component.html
@@ -8,6 +8,8 @@ eput
   [people]="people"
   (onGuestAdd)="addGuest($event)"
   (onGuestRemove)="removeGuest($event)"
+  (onPersonRemove)="removePerson($event)"
+  (onToggle)="toggleAttending($event)"
 
 
 ></app-person-list>
