--- a/ngrxStore/party-planner/src/app/person-list.component.html
+++ b/ngrxStore/party-planner/src/app/person-list.component.html
@@ -2,7 +2,8 @@
 <ul>
   <li *ngFor="let person of people; let index = index;">
     Name: {{person.name}} - 
-    Guests: {{person.guests}} <button (click)="addGuest(index)">+</button> <button (click)="removeGuest(index)">-</button> 
-    <!--Attending? {{person.attending}} <input type="checkbox" [(ngModel)]="person.attending" (click)="toggleAttending(index)">-->
+    Guests: {{person.guests}} <button (click)="addGuest(index)">+</button> <button (click)="removeGuest(index)" *ngIf="person.guests > 0">-</button> 
+    Attending? {{person.attending}} <input type="checkbox" (click)="toggleAttending(index)">
+    <button (click)="removePerson(index)">Delete</button>
   </li>
 </ul>
