--- a/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
+++ b/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
@@ -1,4 +1,11 @@
-<button (click)="click$.next()">Update</button>
-<h1>
+<input type="number" value="0" #inputNum />
+<button (click)="click$.next(inputNum.value)">Update</button>
+<!--<h1>
   {{clock | async | date:'yMMMdjms' }}
-</h1>
+</h1>-->
+<app-clock 
+  [time]="time | async">
+</app-clock>
+<div *ngFor="let person of people | async">
+  {{person.name}} is in {{person.time}}
+</div>
