on click of person new value pushed into person subject, mapped to reducer action and dispatched to reducer. reducer tested for action and match inside people state array, modifies relevant person, returns new state

--- a/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
+++ b/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
@@ -3,6 +3,6 @@
 <app-clock 
   [time]="time | async">
 </app-clock>
-<div *ngFor="let person of people | async">
+<div (click)="person$.next(person)" *ngFor="let person of people | async">
   {{person.name}} is in {{person.time | date:'jms'}}
 </div>
