used vale of state from time as payload for another reducer action

--- a/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
+++ b/angular-rxjs-ngrxStore/angular-rxjs-ngrxStore/src/app/app.component.html
@@ -6,3 +6,4 @@
 <div (click)="person$.next(person)" *ngFor="let person of people | async">
   {{person.name}} is in {{person.time | date:'jms'}}
 </div>
+<button (click)="recall$.next()"  >Recall</button>
